добавил репо для niceview elemental

--- a/config/west.yml
+++ b/config/west.yml
@@ -4,6 +4,8 @@ manifest:
       url-base: https://github.com/zmkfirmware
     - name: stelmakhdigital
       url-base: https://github.com/stelmakhdigital
+    - name: kevinpastor
+      url-base: https://github.com/kevinpastor
   projects:
     - name: zmk
       remote: zmkfirmware
@@ -12,5 +14,8 @@ manifest:
     - name: zmk_driver_azoteq
       remote: stelmakhdigital
       revision: master
+    - name: nice-view-elemental
+      remote: kevinpastor
+      revision: main
   self:
     path: config
