--- a/boards/shields/stelmakh/stelmakh-pinctrl.dtsi
+++ b/boards/shields/stelmakh/stelmakh-pinctrl.dtsi
@@ -41,7 +41,7 @@
         group1 {
             psels = <NRF_PSEL(TWIM_SDA, 0, 8)>,    
                     <NRF_PSEL(TWIM_SCL, 0, 22)>;   
-            bias-pull-up;
+            low-power-enable;
         };
     };
 };
