--- a/build.yaml
+++ b/build.yaml
@@ -1,8 +1,8 @@
 ---
 include:
-  - board: nice_nano
+  - board: nice_nano_v2
     shield: stelmakh_left nice_view
-  - board: nice_nano
+  - board: nice_nano_v2
     shield: stelmakh_right nice_view
-  - board: nice_nano
+  - board: nice_nano_v2
     shield: settings_reset
