--- a/config/west.yml
+++ b/config/west.yml
@@ -7,10 +7,11 @@ manifest:
   projects:
     - name: zmk
       remote: zmkfirmware
-      revision: main
+      revision: v0.3
       import: app/west.yml
     - name: zmk_driver_azoteq
       remote: stelmakhdigital
       revision: master
   self:
     path: config
+
